# ChangeLog for net-www/horde-mnemo
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/horde-mnemo/Attic/ChangeLog,v 1.6 2004/06/25 00:54:13 agriffis Exp $

  01 Apr 2004; Chris Aniszczyk <zx@gentoo.org> horde-mnemo-1.1.1.ebuild:
  Marking ~hppa

*horde-mnemo-1.1.1 (26 Feb 2004)

  26 Feb 2004; Martin Holzer <mholzer@gentoo.org> horde-mnemo-1.1.1.ebuild:
  version bumped.

*horde-mnemo-1.1 (19 Jan 2004)

  19 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial ebuild made by me.