@@ -1,0 +1,1 @@
+MD5 5712907caa5a755bb7564f0e5b970d88 mnemo-1.1.2.tar.gz 268416
