@@ -1,6 +1,11 @@
 # ChangeLog for net-www/horde-mnemo
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/horde-mnemo/Attic/ChangeLog,v 1.6 2004/06/25 00:54:13 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/horde-mnemo/Attic/ChangeLog,v 1.7 2004/08/08 06:40:20 vapier Exp $
+
+*horde-mnemo-1.1.2 (08 Aug 2004)
+
+  08 Aug 2004; Mike Frysinger <vapier@gentoo.org> +horde-mnemo-1.1.2.ebuild:
+  Version bump.
 
   01 Apr 2004; Chris Aniszczyk <zx@gentoo.org> horde-mnemo-1.1.1.ebuild:
   Marking ~hppa
